[package]
name = "rpp-pruning"
version.workspace = true
edition.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
