[package]
name = "rpp-sim"
version = "0.1.0"
edition = "2021"
rust-version = "1.79"

[features]
default = []
# Enables long-running deterministic simulation smoke tests.
ci-sim = []

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
rpp-p2p = { path = "../p2p" }
rand = { version = "0.7", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
tokio = { version = "1.37", features = ["fs", "macros", "process", "rt", "sync", "time"] }
toml = { version = "=0.8.12", path = "../../third_party/toml/0.8.12" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tempfile = "3.10"
sha2 = "0.10"
libc = "0.2"

[dev-dependencies]
insta = { version = "1.39", features = ["json"] }
