[package]
name = "rpp-wallet-interface"
version.workspace = true
edition.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
anyhow = "1"
hex.workspace = true
serde = { version = "=1.0.225", features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
serde_bytes = "=0.11.14"

[dev-dependencies]
serde_json.workspace = true
