[package]
name = "rpp-wallet-interface"
version.workspace = true
edition.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"

[features]
default = []
wallet_rpc_mtls = []
wallet_hw = []
vendor_electrs = []
wallet_zsi = []
wallet_multisig_hooks = []

[dependencies]
anyhow = "1"
clap = { workspace = true, features = ["derive"] }
hex.workspace = true
base64ct = "1.6.0"
sha2.workspace = true
serde = { version = "=1.0.225", features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
serde_bytes = "=0.11.14"
parking_lot = "=0.12.5"

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true
