[package]
name = "rpp-wallet"
version = "0.1.0"
edition = "2021"
rust-version = "1.79"

[features]
default = ["prover-stwo"]
prover-stwo = [
    "prover-backend-interface/prover-stwo",
    "dep:prover_stwo_backend",
    "prover_stwo_backend/prover-stwo",
]
prover-stwo-simd = [
    "prover-stwo",
    "prover-backend-interface/prover-stwo-simd",
    "prover_stwo_backend/simd",
]
prover-mock = ["prover-backend-interface/prover-mock"]
backend-rpp-stark = []
vendor_electrs = [
    "dep:tokio",
    "dep:serde",
    "dep:serde_json",
    "dep:sha2",
    "dep:storage-firewood",
    "dep:rpp",
    "dep:rpp_p2p",
    "dep:hex",
    "dep:parking_lot",
]
vendor_electrs_telemetry = []
vendor_electrs_test_support = ["vendor_electrs"]

[dependencies]
anyhow = "1"
prover-backend-interface = { path = "../zk/backend-interface" }
prover_stwo_backend = { path = "../zk/prover_stwo_backend", default-features = false, optional = true }
sha2 = { version = "0.10", optional = true }
storage-firewood = { path = "../../storage-firewood", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
tokio = { version = "1.37", features = ["sync", "rt", "signal"], optional = true }
rpp = { package = "firewood", path = "../../firewood", optional = true }
rpp_p2p = { package = "rpp-p2p", path = "../../rpp/p2p", optional = true }
hex = { version = "0.4", optional = true }
parking_lot = { version = "0.12", optional = true }
log = "0.4"
tracing = "0.1"

[dev-dependencies]
tempfile = "3.10"
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "=0.12.24", default-features = false, features = ["json", "rustls-tls"] }
opentelemetry = "=0.30.0"
opentelemetry_sdk = "=0.30.0"

