[package]
name = "rpp-wallet"
version = "0.1.0"
edition = "2021"
rust-version = "1.79"

[features]
default = ["prover-mock"]
nightly-prover = [
    "dep:prover_stwo_backend",
    "prover_stwo_backend/prover-stwo",
]
prover-stwo = [
    "nightly-prover",
    "prover-backend-interface/prover-stwo",
    "dep:prover-stwo-circuits",
]
prover-stwo-simd = [
    "prover-stwo",
    "nightly-prover",
    "prover-backend-interface/prover-stwo-simd",
    "prover_stwo_backend/simd",
]
prover-mock = ["prover-backend-interface/prover-mock"]
backend-rpp-stark = []
vendor_electrs = ["dep:sha2", "dep:rpp_p2p", "dep:parking_lot"]
vendor_electrs_telemetry = []
vendor_electrs_test_support = ["vendor_electrs"]

[dependencies]
anyhow = "1"
prover-backend-interface = { path = "../zk/backend-interface" }
prover_stwo_backend = { workspace = true, optional = true }
prover-stwo-circuits = { path = "../../prover/stwo", optional = true }
sha2 = { version = "0.10", optional = true }
storage-firewood = { path = "../../storage-firewood" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["sync", "rt", "signal", "macros", "time"] }
rpp = { package = "firewood", path = "../../firewood" }
rpp_p2p = { package = "rpp-p2p", path = "../../rpp/p2p", optional = true }
hex = "0.4"
parking_lot = { version = "0.12", optional = true }
log = "0.4"
tracing = "0.1"
clap = { workspace = true, features = ["derive"] }
bincode = { version = "=1.3.3", default-features = false }
serde_bytes = "0.11"
thiserror = "1"
reqwest = { version = "=0.12.24", default-features = false, features = ["json", "rustls-tls"] }
toml = { version = "=0.8.12", path = "../../third_party/toml/0.8.12" }
ed25519-dalek = { version = "2.1.1", default-features = false, features = ["std"] }
rand_core = { version = "0.6", features = ["getrandom"] }

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3.10"
uuid = { version = "1", features = ["v4"] }
opentelemetry = "=0.30.0"
opentelemetry_sdk = "=0.30.0"
prover_mock_backend = { path = "../zk/prover_mock_backend" }

