[package]
name = "rpp-wallet-lib"
version = "0.1.1"
edition = "2021"
rust-version = "1.79"

[lib]
name = "rpp_wallet"

[features]
default = ["prover-mock", "backup"]
unstable-all-provers = []
wallet_hw = []
wallet_zsi = []
wallet_multisig_hooks = []
wallet_rpc_mtls = []
runtime = []
test-fixtures = []
nightly-prover = [
    "dep:prover_stwo_backend",
    "prover_stwo_backend/prover-stwo",
]
prover-stwo = [
    "nightly-prover",
    "prover-backend-interface/prover-stwo",
    "dep:prover-stwo-circuits",
    "rpp-wallet-interface/prover-stwo",
]
prover_stwo_backend = ["prover-stwo"]
prover-stwo-simd = [
    "prover-stwo",
    "nightly-prover",
    "prover-backend-interface/prover-stwo-simd",
    "prover_stwo_backend/simd",
]
prover-mock = [
    "prover-backend-interface/prover-mock",
    "rpp-wallet-interface/prover-mock",
]
backend-rpp-stark = []
vendor_electrs = ["dep:sha2", "dep:rpp_p2p", "dep:parking_lot"]
vendor_electrs_telemetry = []
vendor_electrs_test_support = ["vendor_electrs"]
wallet_gui = ["dep:iced", "dep:arboard", "dep:qrcode"]
backup = ["dep:sha2"]

[dependencies]
anyhow = "1"
argon2 = "0.5"
base64 = "0.22"
prover-backend-interface = { path = "../zk/backend-interface" }
prover_stwo_backend = { workspace = true, optional = true }
prover-stwo-circuits = { path = "../../prover/stwo", optional = true }
sha2 = { version = "0.10", optional = true }
storage-firewood = { path = "../../storage-firewood" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_ignored = "0.1"
tokio = { version = "1.37", features = ["sync", "rt", "signal", "macros", "time"] }
tokio-util = { version = "0.7" }
rpp_p2p = { package = "rpp-p2p", path = "../../rpp/p2p", optional = true }
rpp-wallet-interface = { path = "../wallet-interface" }
hex = "0.4"
parking_lot = { version = "0.12", optional = true }
log = "0.4"
tracing = "0.1"
chacha20poly1305 = "0.10"
clap = { workspace = true, features = ["derive"] }
bincode = { version = "=1.3.3", default-features = false }
serde_bytes = "0.11"
thiserror = "1"
reqwest = { version = "=0.12.24", default-features = false, features = ["json", "rustls-tls", "blocking"] }
signal-hook = "0.3"
regex = "1.11"
hostname = "0.3"
toml = { version = "=0.8.12", path = "../../third_party/toml/0.8.12" }
ed25519-dalek = { version = "2.1.1", default-features = false, features = ["std"] }
rand_core = { version = "0.6", features = ["getrandom"] }
rpassword = "7.3"
zeroize = "1.8"
once_cell = "=1.21.3"
iced = { version = "0.12.1", optional = true, features = ["tokio", "qr_code"] }
arboard = { version = "3.4", optional = true }
qrcode = { version = "0.13", optional = true }
metrics = { workspace = true }
tempfile = "3.10"

[dev-dependencies]
opentelemetry = "=0.30.0"
opentelemetry_sdk = "=0.30.0"
prover_mock_backend = { path = "../zk/prover_mock_backend" }
httpmock = "0.7"

[[bin]]
name = "rpp-wallet-gui"
path = "src/ui/main.rs"
required-features = ["wallet_gui"]

