[package]
name = "snapshot-verify"
version.workspace = true
edition.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1.0"
base64 = "0.22.1"
blake2 = "=0.10.6"
clap.workspace = true
ed25519-dalek = { version = "2.1.1", default-features = false, features = ["std", "rand_core"] }
hex.workspace = true
metrics.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json.workspace = true
sha2.workspace = true
thiserror = "1.0"

[dev-dependencies]
assert_matches = "1.5"
metrics-exporter-prometheus = "=0.17.2"
serde_yaml = "0.9"
tempfile.workspace = true

[lints]
workspace = true
