[package]
name = "zsi-fixtures"
version.workspace = true
edition.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[[bin]]
name = "zsi-fixtures"
path = "src/main.rs"
required-features = ["prover-stwo"]

[features]
default = []
prover-stwo = []

[dependencies]
anyhow = "=1.0.100"
hex.workspace = true
serde = { version = "=1.0.225", features = ["derive"] }
serde_json.workspace = true
rpp-chain = { path = "../../rpp/chain", default-features = false, features = ["prover-stwo"] }
ed25519-dalek = "=2.1.1"
