[package]
name = "rpp-wallet-fuzz"
version = "0.0.0"
edition = "2021"
rust-version = "1.79"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { version = "1", features = ["derive"] }
libfuzzer-sys = { version = "0.4", features = ["arbitrary-derive"] }
serde_json = "1.0"
prover_mock_backend = { path = "../../zk/prover_mock_backend" }

[dependencies.rpp-wallet]
path = ".."
default-features = false
features = ["prover-mock"]

[[bin]]
name = "wallet_rpc"
path = "fuzz_targets/wallet_rpc.rs"
test = false
doc = false

[[bin]]
name = "zsi_lifecycle"
path = "fuzz_targets/zsi_lifecycle.rs"
test = false
doc = false
