[package]
name = "prover-backend-interface"
version = "0.1.0"
edition = "2021"
description = "Common prover backend interface shared across RPP components"
license = "MIT"

[features]
default = []
prover-stwo = []
prover-mock = []

[dependencies]
bincode = "1.3"
blake2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
blake3 = "1.5"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
