[package]
name = "prover-backend-interface"
version = "0.1.0"
edition = "2021"
rust-version = "1.79"
description = "Common prover backend interface shared across RPP components"
license = "MIT"

[features]
default = []
prover-stwo = []
prover-stwo-simd = ["prover-stwo"]
prover-mock = []

[dependencies]
bincode = "=1.3.3"
blake2 = "=0.10.6"
serde = { version = "=1.0.225", features = ["derive"] }
thiserror = "=2.0.12"

[dev-dependencies]
blake3 = "=1.8.2"
hex = "=0.4.3"
serde = { version = "=1.0.225", features = ["derive"] }
