[package]
name = "prover_mock_backend"
version = "0.1.0"
edition = "2021"
rust-version = "1.79"
description = "Mock prover backend for stable toolchains"
license = "MIT"

[features]
default = []
unstable-all-provers = []
prover-stwo = []
prover-mock = []

[dependencies]
bincode = "1.3"
blake3 = { version = "1.5", default-features = false, features = ["std"] }
prover-backend-interface = { path = "../backend-interface" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
