[package]
name = "prover_stwo_backend"
version = "1.0.0"
edition = "2021"
description = "Local STWO proof system fork for the RPP project"
authors = ["RPP Labs <dev@rpp.example>"]
license = "MIT"

[features]
default = []
official = ["dep:stwo-official"]
prover = ["official", "stwo-official/prover"]
fri = ["prover"]
scaffold = []
prover-stwo = ["official"]
prover-mock = []

[dependencies]
bincode = "1.3"
blake2 = "0.10"
hex = "0.4"
num-bigint = { version = "0.4", features = ["serde"] }
num-traits = "0.2"
prover-backend-interface = { path = "../backend-interface" }
rand = { version = "0.8", features = ["std_rng"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
stwo-official = { package = "stwo-official", path = "vendor/stwo-dev/crates/stwo", optional = true }
