[package]
name = "prover_stwo_backend"
version = "1.0.0"
edition = "2021"
rust-version = "1.79"
description = "Local STWO proof system fork for the RPP project"
authors = ["RPP Labs <dev@rpp.example>"]
license = "MIT"

[features]
default = []
official = ["dep:stwo-official", "dep:tracing"]
prover = ["official", "stwo-official/prover"]
fri = ["prover"]
scaffold = []
prover-stwo = ["prover"]
prover-stwo-simd = ["prover", "stwo-official/parallel"]
simd = ["prover-stwo-simd"]
prover-mock = []

[dependencies]
bincode = "=1.3.3"
blake2 = "=0.10.6"
hex = "=0.4.3"
num-bigint = { version = "=0.4.6", features = ["serde"] }
num-traits = "=0.2.19"
prover-backend-interface = { path = "../backend-interface" }
rand = { version = "=0.8.5", features = ["std_rng"] }
rpp-identity-tree = { path = "../../identity-tree" }
serde = { version = "=1.0.225", features = ["derive"] }
serde_json = "=1.0.145"
thiserror = "=2.0.12"
stwo-official = { package = "stwo-official", path = "vendor/stwo-dev/0.1.1/crates/stwo", optional = true }
ed25519-dalek = "=2.1.1"
tracing = { version = "=0.1.41", features = ["std"], optional = true }
